<resources>
    <string name="detalhe_title"> </string>
    <string name="categorias_title">Categorias</string>
    <string name="livros_title">Livros Do Acervo</string>
    <string name="login_registro_input_email">Email..</string>
    <string name="login_registro_input_senha">Senha..</string>
    <string name="login_button">Login</string>
    <string name="inicio_item_livros">Livros</string>
    <string name="inicio_item_categorias">Categorias</string>
    <string name="inicio_item_avisos">Avisos</string>
    <string name="livros_categoria_input">Faça Sua Busca...</string>
    <string name="livros_novo">Novo</string>
    <string name="categorias_novo">Novo</string>
    <string name="detalhe_opcao_editar">Editar</string>
    <string name="detalhe_opcao_remover">Remover</string>
    <string name="detalhe_opcao_status">Status</string>
    <string name="detalhe_default_titulo">Histórico</string>
    <string name="detalhe_editar_input_titulo">Titulo...</string>
    <string name="detalhe_editar_input_descricao">Descrição...</string>
    <string name="detalhe_editar_button">Salvar</string>
    <string name="detalhe_remover_titulo">Realmente Deseja REMOVER Esse Livro Dos Registros?</string>
    <string name="detalhe_remover_button">Remover</string>
    <string name="detalhe_status_troca_titulo">Trocar Status:</string>
    <string name="detalhe_status_button">Trocar</string>
    <string name="registro_input_nome">Nome..</string>
    <string name="registro_button">Registrar</string>
    <string name="login_criar_conta">Criar Conta</string>
    <string name="registro_fazer_login">Fazer Login</string>

    <string name="cadastro_livro_title">Cadastro de Livro</string>
    <string name="hint_nome">Título...</string>
    <string name="hint_descricao">Descrição...</string>
    <string name="salvar">Salvar</string>
    <string name="volume">0</string>
    <string name="volumeText">Volume</string>
    <string name="hint_editora">Editora</string>
    <string name="hint_ano">Ano</string>
    <string name="hint_autor">Autor</string>
    <string name="hint_pg">Pags</string>
    <string name="hint_edicao">Edição</string>
    <string name="titleConser">Conservação</string>
    <string-array name="Conservacao">
        <item>Conservação</item>
        <item>Ótimo</item>
        <item>Bom</item>
        <item>Regular</item>
        <item>Ruim</item>
        <item>Péssimo</item>
    </string-array>

    <string name="app_name">Acervo</string>
    <string name="padraoCategoria">Categoria</string>
    <string-array name="livrosCategorias">
        <item>Todos</item>
        <item>Terror</item>
        <item>Fantasia</item>
        <item>Romance</item>
        <item>Ficção Cientifica</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
