<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstGray"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.example.elias.acervoapp.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Acervo"
        android:textSize="@dimen/BigH2"
        android:textStyle="bold"
        android:textColor="@color/fivGray"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />
    <TextView
        android:id="@+id/titleRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/BigH2"
        android:textStyle="bold"
        android:textColor="@color/firstBlue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />
    <ImageView
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:id="@+id/logoRegistro"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/coruja"
        android:layout_alignRight="@id/titleRegistro"/>
    <EditText
        android:id="@+id/nameRegistro"
        android:layout_marginTop="50dp"
        android:layout_below="@id/titleRegistro"
        android:textColor="@color/firstBlue"
        android:textColorHint="@color/firstBlue"
        android:hint="@string/registro_input_nome"
        android:textSize="@dimen/inputDefault"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/backlogininput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/emailRegistro"
        android:inputType="textEmailAddress"
        android:layout_marginTop="35dp"
        android:layout_below="@id/nameRegistro"
        android:textColor="@color/firstBlue"
        android:textColorHint="@color/firstBlue"
        android:hint="@string/login_registro_input_email"
        android:textSize="@dimen/inputDefault"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/backlogininput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="35dp"
        android:layout_below="@id/emailRegistro"
        android:hint="@string/login_registro_input_senha"
        android:id="@+id/senhaRegistro"
        android:textColor="@color/firstBlue"
        android:textColorHint="@color/firstBlue"
        android:textSize="@dimen/inputDefault"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:inputType="textPassword"
        android:background="@drawable/backlogininput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/botaoRegistro"
        android:textStyle="bold"
        android:textSize="@dimen/inputDefault"
        android:layout_marginTop="50dp"
        android:layout_below="@id/senhaRegistro"
        android:background="@drawable/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_button"
        android:textColor="@color/secGray"
        android:onClick="registrarUsuario"/>
    <Button
        android:onClick="irParaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/registro_fazer_login"
        android:textSize="@dimen/inputDefault"
        android:textColor="@color/secBlue"
        android:textAllCaps="true"
        android:background="@drawable/registroinloginbutton"
        android:layout_below="@id/botaoRegistro"/>
</RelativeLayout>
