<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secGray"
    tools:context="com.example.elias.acervoapp.Livros">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/firstYellow"
            android:id="@+id/topCadastro">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/book1"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topCadastro"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="@dimen/d3"
            android:background="@drawable/editback"
            android:id="@+id/topImagem">
            <FrameLayout
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="100dp">
                <ImageView
                    android:layout_margin="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:background="@drawable/image8690"
                    android:id="@+id/imgLivro"/>
                <Button
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|right"
                    android:background="@drawable/camera"
                    android:onClick="imagemLivro"
                    android:id="@+id/botaoCamera"
                    />
            </FrameLayout>
        </FrameLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/topImagem"
            android:paddingLeft="@dimen/d5"
            android:paddingRight="@dimen/d5"
            android:background="@color/firstGray"
            android:id="@+id/Cadastro">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/d3"
                android:paddingBottom="@dimen/d3"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d5"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/hint_nome"
                android:textColor="@color/firstYellow"
                android:textColorHint="@color/firstYellow"
                android:textSize="@dimen/H3"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/item1"
                android:drawablePadding="@dimen/d3"
                android:id="@+id/txtTitulo"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingTop="@dimen/d3"
                android:paddingBottom="@dimen/d3"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d5"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/hint_autor"
                android:textColor="@color/firstYellow"
                android:textColorHint="@color/firstYellow"
                android:textSize="@dimen/H3"
                android:background="@drawable/edittext_bg"
                android:layout_below="@id/txtTitulo"
                android:id="@+id/txtAutor"/>
            <LinearLayout
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAutor"
                android:id="@+id/idTrio">
                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingTop="@dimen/d3"
                    android:paddingBottom="@dimen/d3"
                    android:paddingLeft="@dimen/d5"
                    android:paddingRight="@dimen/d5"
                    android:inputType="textPersonName|textCapWords"
                    android:hint="@string/hint_ano"
                    android:textColor="@color/firstYellow"
                    android:textColorHint="@color/firstYellow"
                    android:textSize="@dimen/H3"
                    android:background="@drawable/edittext_bg"
                    android:drawablePadding="@dimen/d3"
                    android:id="@+id/txtAno"/>
                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/d3"
                    android:paddingBottom="@dimen/d3"
                    android:paddingLeft="@dimen/d5"
                    android:paddingRight="@dimen/d5"
                    android:inputType="textPersonName|textCapWords"
                    android:hint="@string/hint_edicao"
                    android:textColor="@color/firstYellow"
                    android:textColorHint="@color/firstYellow"
                    android:textSize="@dimen/H3"
                    android:background="@drawable/edittext_bg"
                    android:drawablePadding="@dimen/d3"
                    android:id="@+id/txtEdicao"/>
                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentRight="true"
                    android:paddingTop="@dimen/d3"
                    android:paddingBottom="@dimen/d3"
                    android:paddingLeft="@dimen/d5"
                    android:paddingRight="@dimen/d5"
                    android:inputType="textPersonName|textCapWords"
                    android:hint="@string/hint_pg"
                    android:textColor="@color/firstYellow"
                    android:textColorHint="@color/firstYellow"
                    android:textSize="@dimen/H3"
                    android:background="@drawable/edittext_bg"
                    android:id="@+id/txtPag"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingTop="@dimen/d3"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d5"
                android:paddingBottom="@dimen/d3"
                android:gravity="top"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/hint_descricao"
                android:textColor="@color/firstYellow"
                android:textColorHint="@color/firstYellow"
                android:textSize="@dimen/H3"
                android:minHeight="100dp"
                android:background="@drawable/edittext_bg"
                android:layout_below="@id/idTrio"
                android:id="@+id/txtDescricao"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingTop="@dimen/d3"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d5"
                android:paddingBottom="@dimen/d3"
                android:entries="@array/Conservacao"
                android:textColorHint="@color/firstYellow"
                android:background="@drawable/edittext_bg"
                android:layout_below="@+id/txtDescricao"
                android:id="@+id/spnConservacao"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingTop="@dimen/d3"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d5"
                android:paddingBottom="@dimen/d3"
                android:hint="@string/hint_editora"
                android:textSize="@dimen/H3"
                android:textColor="@color/firstYellow"
                android:textColorHint="@color/firstYellow"
                android:inputType="textPersonName|textCapWords"
                android:drawableLeft="@drawable/edit"
                android:drawablePadding="@dimen/d3"
                android:background="@drawable/edittext_bg"
                android:layout_below="@+id/spnConservacao"
                android:id="@+id/txtEditora"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d3"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d5"
                android:text="@string/volumeText"
                android:textSize="@dimen/H3"
                android:textColor="@color/secWhite"
                android:layout_below="@+id/txtEditora"
                android:id="@+id/volumeText"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/d3"
                android:paddingBottom="@dimen/d3"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d5"
                android:text="@string/salvar"
                android:textColor="@color/white"
                android:onClick="registrarLivro"
                android:background="@drawable/button_edit_livro"
                android:layout_below="@+id/topVolume"
                android:id="@+id/botaoSalvar"/>
            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/d1"
                android:paddingBottom="@dimen/d1"
                android:paddingLeft="@dimen/d1"
                android:paddingRight="@dimen/d1"
                android:background="@drawable/edittext_bg"
                android:layout_below="@+id/txtEditora"
                android:id="@+id/topVolume">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@drawable/botao"
                    android:onClick="aumentaValor"
                    android:id="@+id/botaoCima"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    android:textColor="@color/firstYellow"
                    android:textAlignment="center"
                    android:layout_below="@id/botaoCima"
                    android:id="@+id/textoMeio"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@drawable/botao2"
                    android:onClick="diminuiValor"
                    android:layout_below="@id/textoMeio"
                    android:id="@+id/botaoBaixo"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
