<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/secGray">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.elias.acervoapp.Inicio">
        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/coruja">
        </ImageView>
        <TextView
            android:id="@+id/logoTxt"
            android:textColor="@color/secWhite"
            android:textSize="@dimen/H1"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/logoImg"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/app_name" />
        <TableLayout
            android:id="@+id/options"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:stretchColumns="*"
            android:layout_below="@+id/logoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">
            <TableRow>
                <com.example.elias.acervoapp.uiimplementacoes.FrameSquareLayout
                    android:onClick="showLivros"
                    android:layout_width="0dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/thirdGray">
                    <TextView
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_item_livros"
                        android:textColor="@color/white"
                        android:textSize="@dimen/inicio_item_title">
                    </TextView>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_widthPercent="40%"
                        app:layout_heightPercent="40%"
                        android:src="@drawable/livro"
                        android:layout_gravity="center"/>
                </com.example.elias.acervoapp.uiimplementacoes.FrameSquareLayout>
                <com.example.elias.acervoapp.uiimplementacoes.FrameSquareLayout
                    android:onClick="showCategorias"
                    android:layout_width="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/thirdGray">
                    <TextView
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_item_categorias"
                        android:textColor="@color/white"
                        android:textSize="@dimen/inicio_item_title">
                    </TextView>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_widthPercent="40%"
                        app:layout_heightPercent="40%"
                        android:src="@drawable/categorias"
                        android:layout_gravity="center"/>
                </com.example.elias.acervoapp.uiimplementacoes.FrameSquareLayout>
                <com.example.elias.acervoapp.uiimplementacoes.FrameSquareLayout
                    android:onClick="showAvisos"
                    android:layout_width="0dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/thirdGray">
                    <TextView
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_item_avisos"
                        android:textColor="@color/white"
                        android:textSize="@dimen/inicio_item_title">
                    </TextView>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_widthPercent="40%"
                        app:layout_heightPercent="40%"
                        android:src="@drawable/aviso"
                        android:layout_gravity="center"/>
                </com.example.elias.acervoapp.uiimplementacoes.FrameSquareLayout>
            </TableRow>
        </TableLayout>
        <RelativeLayout
            android:layout_below="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:paddingTop="10dp"
                android:id="@+id/grafico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/firstGray">
                <com.example.elias.acervoapp.uiimplementacoes.GraficoPizza
                    android:layout_width="@dimen/inicio_grafico_square"
                    app:centerColor="@color/firstGray"
                    app:raioInterno="@dimen/inicio_grafico_raio"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/inicio_grafico_square">
                    <com.example.elias.acervoapp.uiimplementacoes.GraficoSecao
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:secaoColor="@color/firstGreen"
                        app:qntNumber="70"/>
                    <com.example.elias.acervoapp.uiimplementacoes.GraficoSecao
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:secaoColor="@color/firstRed"
                        app:qntNumber="30"/>

                </com.example.elias.acervoapp.uiimplementacoes.GraficoPizza>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60\nLivros"
                    android:textSize="@dimen/inicio_grafico_text"
                    android:textColor="@color/secWhite"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </FrameLayout>
            <LinearLayout
                android:layout_below="@+id/grafico"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/thirdGray"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:id="@+id/colorOpt"
                        android:background="@color/firstGreen">
                    </FrameLayout>
                    <TextView
                        android:layout_below="@id/colorOpt"
                        android:id="@+id/guardados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Guardados"
                        android:textSize="@dimen/H4"
                        android:textColor="@color/secWhite"
                        android:layout_centerHorizontal="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="70%"
                        android:textColor="@color/secWhite"
                        android:layout_below="@id/guardados"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/H2"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_marginLeft="2dp"
                    android:background="@color/thirdGray"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:id="@+id/colorOpt2"
                        android:background="@color/firstRed">
                    </FrameLayout>
                    <TextView
                        android:layout_below="@id/colorOpt2"
                        android:id="@+id/guardados2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Emprestados"
                        android:textSize="@dimen/H4"
                        android:textColor="@color/secWhite"
                        android:layout_centerHorizontal="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30%"
                        android:textColor="@color/secWhite"
                        android:layout_below="@id/guardados2"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/H2"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
